[metadata]
name = roomba_curses
version = 0.0.0
description = roomba simulation using curses
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tech-chad/roomba_curses
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires:

python_requires = >= 3.6.1

[options.packages.find]
exclude =

[options.entry_points]
console_scripts =
    croomba = roomba_curses:main